[package]
name = "sequoia"
version = "0.3.0"
edition = "2021"

[dependencies]
regex = "1.5"
crossterm = "0.27"
chrono = "0.4.39"
clap = "3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
tokio = { version = "1", features = ["full"] } 
urlencoding = "2.1.3"
aes = "0.7.1"
